--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #242424;
+  background-color: #FFF7EB;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
