--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,7 +19,7 @@
 
 #app {
   width: 100%;
-    height: 100%;
+  height: 100%;
 }
 
 html,
@@ -26,5 +28,4 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
