--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,15 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.text-stroke {
+  -webkit-text-stroke: 1.5px black;
+}
+
+.text-stroke-2 {
+  -webkit-text-stroke: 2px black;
+}
+
+.text-stroke-6 {
+  -webkit-text-stroke: 6px black;
+}
